// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Prueba en <GifExpertApp / debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="hola"
      key="hola"
    />
    <GifGrid
      category="adios"
      key="adios"
    />
  </ol>
</Fragment>
`;

exports[`Prueba en <GifExpertApp / debe de mostrarse correctamente 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;
